--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- 页面头部/导航栏 -->
     <div class="container nav-container">
         <div class="logo">
-            <img src="../image/SushiLin icon.webp"/>
+            <img src="image/SushiLin%20icon.webp"/>
             <h1>Sushi <span>Lin</span></h1>
         </div>
 
         <!-- 主导航菜单 -->
         <nav class="nav-links">
             <a href="index.html">Home</a>
-            <a href="menu.html">Menu</a>
+            <a href=".idea/menu.html">Menu</a>
             <a href="#">About</a>
             <a href="#">Reservations</a>
             <a href="#">Contact</a>
@@ -48,7 +48,7 @@
 <section class="banner">
     <div class="banner-slides"> <!-- 轮播容器 -->
         <!-- 三个轮播项 -->
-        <div class="banner-slide" style="background-image: url('../image/chief.png');">
+        <div class="banner-slide" style="background-image: url('image/chief.png');">
             <div class="slide-content"> <!-- 轮播内容 -->
                 <h2>Chef's Omakase Experience</h2>
                 <p>Our experienced sushi chefs meticulously prepare daily specials using the freshest ingredients to create authentic Japanese cuisine.</p>
@@ -97,25 +97,25 @@
         </div>
 
         <div class="category-grid"> <!-- 分类 -->
-            <a href="menu.html#appetizer" class="category-card"> <!-- 单个分类卡片 -->
+            <a href=".idea/menu.html#appetizer" class="category-card"> <!-- 单个分类卡片 -->
                 <span class="category-icon">🥗</span> <!-- 分类图标 -->
                 <h3 class="category-name">APPETIZER</h3> <!-- 分类名称 -->
                 <p class="category-desc">Exquisite appetizers, a prelude to awakening your taste buds</p>
             </a>
 
-            <a href="menu.html#rolls" class="category-card">
+            <a href=".idea/menu.html#rolls" class="category-card">
                 <span class="category-icon">🌯</span>
                 <h3 class="category-name">ROLLS & HANDROLLS</h3>
                 <p class="category-desc">Creative hand rolls and sushi rolls, a fusion of Eastern and Western flavors</p>
             </a>
 
-            <a href="menu.html#sashimi" class="category-card">
+            <a href=".idea/menu.html#sashimi" class="category-card">
                 <span class="category-icon">🍣</span>
                 <h3 class="category-name">SUSHI & SASHIMI</h3>
                 <p class="category-desc">Selected seasonal sashimi, hand-made by artisans, for the ultimate freshness experience</p>
             </a>
 
-            <a href="menu.html#combo" class="category-card">
+            <a href=".idea/menu.html#combo" class="category-card">
                 <span class="category-icon">🍱</span>
                 <h3 class="category-name">Combo</h3>
                 <p class="category-desc">Chef-recommended pairings allow you to enjoy a variety of signature dishes at once</p>
@@ -135,7 +135,7 @@
         <div class="recommendation-grid"> <!-- 推荐菜品网格 -->
             <div class="product-card"> <!-- 单个产品卡片 -->
                 <div class="product-image">  <!-- 产品图片 -->
-                    <img src="../image/Top.jpg" height="177" width="284"/>
+                    <img src="image/Top.jpg" height="177" width="284"/>
                     <span class="product-badge">Top Pick</span> <!-- 产品标签 -->
                 </div>
                 <div class="product-info"> <!-- 产品信息 -->
@@ -165,7 +165,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="../image/salmon.png" height="1066" width="600"/>
+                    <img src="image/salmon.png" height="1066" width="600"/>
                     <span class="product-badge">New</span>
                 </div>
                 <div class="product-info">
@@ -195,7 +195,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="../image/Tuna.jpg" height="301" width="444"/>
+                    <img src="image/Tuna.jpg" height="301" width="444"/>
                 </div>
                 <div class="product-info">
                     <h3 class="product-name">Tuna Flight</h3>
@@ -224,7 +224,7 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="../image/combo.png" height="480" width="600"/>
+                    <img src="image/combo.png" height="480" width="600"/>
                     <span class="product-badge">Limited</span>
                 </div>
                 <div class="product-info">
@@ -310,7 +310,7 @@
                 <h3>Quick Links</h3>
                 <ul>
                     <li><a href="home.html">Home</a></li>
-                    <li><a href="menu.html">Menu</a></li>
+                    <li><a href=".idea/menu.html">Menu</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Reservations</a></li>
                     <li><a href="#">Contact</a></li>
