--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="index.css">
 
     <title>Sushi Lin - Premium Japanese Sushi Restaurant</title>
 
@@ -23,7 +23,7 @@
         <!-- 主导航菜单 -->
         <nav class="nav-links">
             <a href="index.html">Home</a>
-            <a href=".idea/menu.html">Menu</a>
+            <a href="menu.html">Menu</a>
             <a href="#">About</a>
             <a href="#">Reservations</a>
             <a href="#">Contact</a>
@@ -97,25 +97,25 @@
         </div>
 
         <div class="category-grid"> <!-- 分类 -->
-            <a href=".idea/menu.html#appetizer" class="category-card"> <!-- 单个分类卡片 -->
+            <a href="menu.html#appetizer" class="category-card"> <!-- 单个分类卡片 -->
                 <span class="category-icon">🥗</span> <!-- 分类图标 -->
                 <h3 class="category-name">APPETIZER</h3> <!-- 分类名称 -->
                 <p class="category-desc">Exquisite appetizers, a prelude to awakening your taste buds</p>
             </a>
 
-            <a href=".idea/menu.html#rolls" class="category-card">
+            <a href="menu.html#rolls" class="category-card">
                 <span class="category-icon">🌯</span>
                 <h3 class="category-name">ROLLS & HANDROLLS</h3>
                 <p class="category-desc">Creative hand rolls and sushi rolls, a fusion of Eastern and Western flavors</p>
             </a>
 
-            <a href=".idea/menu.html#sashimi" class="category-card">
+            <a href="menu.html#sashimi" class="category-card">
                 <span class="category-icon">🍣</span>
                 <h3 class="category-name">SUSHI & SASHIMI</h3>
                 <p class="category-desc">Selected seasonal sashimi, hand-made by artisans, for the ultimate freshness experience</p>
             </a>
 
-            <a href=".idea/menu.html#combo" class="category-card">
+            <a href="menu.html#combo" class="category-card">
                 <span class="category-icon">🍱</span>
                 <h3 class="category-name">Combo</h3>
                 <p class="category-desc">Chef-recommended pairings allow you to enjoy a variety of signature dishes at once</p>
@@ -310,7 +310,7 @@
                 <h3>Quick Links</h3>
                 <ul>
                     <li><a href="home.html">Home</a></li>
-                    <li><a href=".idea/menu.html">Menu</a></li>
+                    <li><a href="menu.html">Menu</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Reservations</a></li>
                     <li><a href="#">Contact</a></li>
@@ -347,6 +347,6 @@
     </div>
 </footer>
 
-<script src="home.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
