--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="slide-content">
                 <h2>Spring Seasonal Menu</h2>
                 <p>Experience the delicate flavors of spring with our limited-time menu featuring the finest seasonal ingredients sourced from Japan's premier markets.</p>
-                <a href="#" class="btn">View Menu</a>
+                <a href="menu1.html" class="btn">View Menu</a>
             </div>
         </div>
 
@@ -97,25 +97,25 @@
         </div>
 
         <div class="category-grid"> <!-- 分类 -->
-            <a href="menu.html#appetizer" class="category-card"> <!-- 单个分类卡片 -->
+            <a href="menu1.html#appetizer" class="category-card"> <!-- 单个分类卡片 -->
                 <span class="category-icon">🥗</span> <!-- 分类图标 -->
                 <h3 class="category-name">APPETIZER</h3> <!-- 分类名称 -->
                 <p class="category-desc">Exquisite appetizers, a prelude to awakening your taste buds</p>
             </a>
 
-            <a href="menu.html#rolls" class="category-card">
+            <a href="menu1.html#rolls" class="category-card">
                 <span class="category-icon">🌯</span>
                 <h3 class="category-name">ROLLS & HANDROLLS</h3>
                 <p class="category-desc">Creative hand rolls and sushi rolls, a fusion of Eastern and Western flavors</p>
             </a>
 
-            <a href="menu.html#sashimi" class="category-card">
+            <a href="menu1.html#sashimi" class="category-card">
                 <span class="category-icon">🍣</span>
                 <h3 class="category-name">SUSHI & SASHIMI</h3>
                 <p class="category-desc">Selected seasonal sashimi, hand-made by artisans, for the ultimate freshness experience</p>
             </a>
 
-            <a href="menu.html#combo" class="category-card">
+            <a href="menu1.html#combo" class="category-card">
                 <span class="category-icon">🍱</span>
                 <h3 class="category-name">Combo</h3>
                 <p class="category-desc">Chef-recommended pairings allow you to enjoy a variety of signature dishes at once</p>
@@ -309,7 +309,7 @@
             <div class="footer-column">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="menu.html">Menu</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Reservations</a></li>
@@ -335,12 +335,12 @@
                 <h3>Subscription</h3>
                 <p>Subscribe to our newsletter for the latest menu updates and special offers</p>
                 <div class="newsletter-form">
-                    <input type="email" placeholder="Your email address...">
-                    <button><i class="fas fa-paper-plane"></i></button>
+                    <input type="email" id="newsletter-email" placeholder="Your email address..." required>
+                    <button id="subscribe-btn"><i class="fas fa-paper-plane"></i></button>
                 </div>
+                <p id="subscription-response"></p>
             </div>
         </div>
-
         <div class="copyright">
             <p>© 2025 Sushi Lin, a premium Japanese sushi restaurant. All rights reserved.</p>
         </div>
