--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 </div>
                 <div class="product-info">
                     <h3 class="product-name">Sashimi Dinner</h3>
-                    <p class="product-desc">16 pieces of the freshest, chef-selected sashimi.</p>
+                    <p class="product-desc">16 pieces of the freshest, chef-selected seasonal sashimi.</p>
                     <div class="product-price">$40.00</div>
                     <div class="product-meta">
                         <div class="product-rating">
