--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         <div class="contact-card">
             <h3>Contact Information</h3>
             <p>---------------------------------</p>
-            <p>Address: 123 Sushi Street, New York, NY</p>
+            <p>Address: 78 Clark St, Brooklyn, NY, 11201</p>
             <p>Phone: 347-422-0656</p>
             <p>Email: hello@sushilin.com</p>
             <div class="hint">Mon - Thu: 5:00PM - 10:00PM</div>
